# agent_framework

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
client-react/: README.md  package-lock.json  package.json
client-react/public/: index.html
client-react/src/: App.css  App.js  Chat.css  Chat.js  Signaling.css  Signaling.js
src/api/: __init__.py  ai.py  chat.py  main.py  voice.py
src/apps/AI/: admin.py  apps.py  models.py
src/apps/AI/migrations/: 0001_initial.py
src/apps/AI/services/: google.py
src/apps/AI/services/llm/: base.py
src/apps/chat/: models.py
src/apps/chat/migrations/: 0001_initial.py  0002_chatuser.py
src/apps/chat/services/: ai_pipeline.py  audio_pipeline.py  message_orchestrator.py  pipeline_orchestrator.py  sanitizers.py  stt_pipeline.py  tts_pipeline.py
src/apps/tokens/: admin.py  crypto.py  models.py
src/apps/tokens/migrations/: 0001_initial.py
src/core/: apps.py  asgi.py  models.py  urls.py
src/core/managers/: users.py
src/core/settings/: __init__.py  channels.py  common.py
src/websocket/: consumers.py  routing.py
