[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels[daphne]>=4.2.2",
    "dj-database-url>=2.3.0",
    "django-ninja>=1.4.1",
    "django-ninja-extra>=0.30.0",
    "django-split-settings>=1.3.2",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "sentry-sdk>=2.27.0",
]
