[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "channels[daphne]>=4.2.2",
    "dj-database-url>=2.3.0",
    "django-ninja>=1.4.1",
    "django-ninja-extra>=0.30.0",
    "django-split-settings>=1.3.2",
    "google-genai>=1.14.0",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "pydantic-ai>=0.1.11",
    "sentry-sdk>=2.27.0",
    "validators>=0.35.0",
]
